managed to get the cities to log and display...my class names were all messed up among other things.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!--will be used for searching for the city-->
     <div id="left-side">
         <form id="weather-form">
-        <label id="city-input">Search by City:</label>
+        <label for="city-input">Search by City:</label>
             <br>
             <input type="text" id="city-input" placeholder="City">
             <input id="searchBtn" class="btn btn-primary mb-2" type="submit" value="Search">
@@ -31,57 +31,10 @@
 <!--filler text for now-->
           <div id="5DayForecast">5-day Forecast</div>
           <div id="forcast">
-              <table>
-                  <tr>
-                      <th>
-                          <div class="card" id ="monday">
-                              <div class="card-body">
-                                  <p id="date"></p>
-                                  <p id="temp">TEMP:</p>
-                                  <p id="humidity">HUMIDITY:</p>
-                              </div>
-                          </div>
-                      </th>
-                      <th>
-                        <div class="card" id ="tuesday">
-                            <div class="card-body">
-                                <p id="date"></p>
-                                <p id="temp">TEMP:</p>
-                                <p id="humidity">HUMIDITY:</p>
-                            </div>
-                        </div>
-                    </th>
-                    <th>
-                        <div class="card" id ="wednesday">
-                            <div class="card-body">
-                                <p id="date"></p>
-                                <p id="temp">TEMP:</p>
-                                <p id="humidity">HUMIDITY:</p>
-                            </div>
-                        </div>
-                    </th>
-                    <th>
-                        <div class="card" id ="thursday">
-                            <div class="card-body">
-                                <p id="date"></p>
-                                <p id="temp">TEMP:</p>
-                                <p id="humidity">HUMIDITY:</p>
-                            </div>
-                        </div>
-                    </th>
-                    <th>
-                        <div class="card" id ="friday">
-                            <div class="card-body">
-                                <p id="date"></p>
-                                <p id="temp">TEMP:</p>
-                                <p id="humidity">HUMIDITY:</p>
-                            </div>
-                        </div>
-                    </th>
-                  </tr>
-              </table>
+              
+                
           </div>
-
+ 
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
