--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
    
         <form id="weather-form">
-        <label for="city-input">Search by City:</label>
+        <label for="city-search">Search by City:</label>
             <br>
             <input type="text" id="city-input" placeholder="City">
             <input id="searchBtn" class="btn btn-primary mb-2" type="submit" value="Search">
